# crisprscope

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_integrator.py
examples/: 01_build_anndata_object.py  02_run_orchestrator_test.py  03_debug_orchestrator_test.py
src/crisprscope/: __init__.py  api.py  cli.py  config.yaml
src/crisprscope/integrator/: builder.py  loaders.py  utils.py
src/crisprscope/orchestrator/: demultiplex.py  orchestrator.py
tests/: conftest.py  test_integrator.py  test_orchestrator.py
