[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisprscope"
version = "0.1.0"
authors = [
  { name="Chetan Elenki", email="chetan.elenki@gmail.com" },
]
description = "A package for processing and analyzing single-cell CRISPR screen data from direct DNA sequencing."
# Use the README file for the long description on PyPI
readme = "README.md"
# license = { file = "LICENSE" } # add a LICENSE file
requires-python = ">=3.9"
keywords = ["crispr", "anndata", "bioinformatics", "single-cell", "genomics", "crispresso"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h5py",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "build",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/elenki/crisprscope"
"Bug Tracker" = "https://github.com/elenki/crisprscope/issues"

[project.scripts]
crisprscope = "crisprscope.cli:main"